* Version: 0.8.2
* Build: 20120828
* Copyright 2012 - All rights reserved
* http://objectivehtml.com
*/

Version 0.8.2 - 08/28/2012
--------------------------
- Fixed a bug that omitted certain fields from the prepare_entry method.
- Fixed a bug in the check_ambiguity method that return and improper value.
- Fixed a bug in build_where method that prevented compound conditionals from working.
- Added new methods to the tmpl driver to make parsing easier.

Version 0.8.1 - 08/27/2012
--------------------------
- Fixed a bug that prevented the default select vars from working in the get_channel_entries method.

Version 0.8.0 - 08/20/2012
--------------------------
- Rewrote SQL generate with several new abstract methods. The idea is that channel data
  can be used to make all your own model method consistent and polymorphic.
- Better OR handling, and now supports compound clauses
- General bug fixes with SQL generator 

Version 0.7.0 - 07/11/2012
--------------------------
- Added new tmpl driver that makes parsing FT tags much easier
- (Bug Fix) Fixed a number of issues in the prepare_entry() method. Added more default values.
- (Bug Fix) Fixed an API inconsistency in the submit_entry() and update_entry() methods.
- (Big Fix) Fixed a bug in the get_channel_entries method if queries with conditionals other than the default '='.

Version 0.6.13 - 06/19/2012
---------------------------
- Attempted to fix another PHP 5.4 issue that wasn't fixed in the last update.
- Added a new reindex method that will convert an indexed array to an associative array by "re-indexing" it.

Version 0.6.12 - 06/19/2012
---------------------------
- Fixed a PHP 5.4 issue with the isset function not working correctly with variable variables.

Version 0.6.11 - 05/18/2012
---------------------------
- Added categories fields to the get_category_entries() method to be consistent with get_channel_entries() and get_members(). The get_categories method was maintained for legacy support.